--- a/style.css
+++ b/style.css
@@ -8,19 +8,38 @@ body {
     background-size: cover;
 }
 
-div {
+header {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+div {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-button {
+.bt {
     width: 100px;
     height: 12vh;
     margin: 0.6%;
     border: 0;
+    background-color: #fff;
+    text-decoration: none;
+    font-family: arial;
+    color: rgb(54, 76, 199);
+}
+
+a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
